--- a/eTools Ultimate/Resources/Translations.de-DE.resx
+++ b/eTools Ultimate/Resources/Translations.de-DE.resx
@@ -1300,6 +1300,18 @@
     <value>eTools Ultimate - Update verfügbar</value>
     <comment>AvailableUpdateWindow title</comment>
   </data>
+  <data name="Update Available" xml:space="preserve">
+    <value>Update verfügbar</value>
+  </data>
+  <data name="A new version of eTools Ultimate is ready to install" xml:space="preserve">
+    <value>Eine neue Version von eTools Ultimate ist bereit zur Installation</value>
+  </data>
+  <data name="Install Now" xml:space="preserve">
+    <value>Jetzt installieren</value>
+  </data>
+  <data name="Later" xml:space="preserve">
+    <value>Später</value>
+  </data>
   <data name="New Version Available!" xml:space="preserve">
     <value>Neue Version verfügbar!</value>
     <comment>AvailableUpdateWindow main heading</comment>
